27. SNS에 글 공유하기 - 01. Django Social Share 소개 및 실습

--- a/templates/blogs/post_detail.html
+++ b/templates/blogs/post_detail.html
@@ -1,4 +1,5 @@
 {% extends "blogs/_base.html" %}
+<!-- django_social_share 사용을 위한 문구 -->
 {% load social_share %}
 {% block content %}
 <div class="container">
