--- a/templates/blogs/post_detail.html
+++ b/templates/blogs/post_detail.html
@@ -34,6 +34,11 @@
         {% post_to_facebook post.get_absolute "facebook" %}
       </button>
       <button type="button" class="btn btn-light float-right">
+        <!-- {% post_to_twitter post.get_absolute_url "Post to Twitter" %} -->
+        {% post_to_twitter "새로운 글: {{ post.title }} 읽어보세요!" post.get_absolute_url "Post to Twitter" %}
+
+      </button>
+      <button type="button" class="btn btn-light float-right">
         {% send_email post.title "New Song: {{post.title}}. Check it out!" object_or_url "Share via email" %}
       </button>
     </div>
